# Brand-Identity-Inference

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml
.github/workflows/: keep-alive.yml
backend/: Dockerfile  main.py  requirements.txt
backend/app/: api_keys.py  models.py  storage.py
backend/app/api/: routes.py
backend/app/extractors/: __init__.py  colors.py  fetcher.py  llm.py  llm_verify.py  logo.py  typography.py  vision_detector.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ColorPalette.jsx  LogoCard.jsx  TypographyCard.jsx  VibeCard.jsx
frontend/src/pages/: HistoryPage.jsx  HomePage.jsx
